--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ yarn-error.log
 
 /resources/views/layouts/AppAuth
 /resources/views/layouts/app2
-/resources/views/layout
+
 /resources/views/Menu/Cursos_Insc_comm/cursos2
 /resources/views/Menu/Cursos_Insc_comm/notas
 /resources/views/Menu/Cursos_Insc_comm/create
@@ -22,17 +22,17 @@ yarn-error.log
 /resources/views/layout
 /resources/views/layouts/applogin
 
-/resources/views/asoc
-/resources/views/pdf-prof
-/resources/views/jsc
-/resources/views/attr-livewire
+resources/views/layout
+resources/views/asoc
+resources/views/pdf-prof
+resources/views/jsc
+resources/views/attr-livewire
 
-/resources/views/menu
-/piblic/css/normalize.css
+/public/css/normalize.css
 
-/piblic/js/conf.js
-/piblic/js/SelcDinam.js
-/piblic/js/SelcDinamiAG.js
+/public/js/conf.js
+/public/js/SelcDinam.js
+/public/js/SelcDinamiAG.js
 
 
 /app/Http/Controllers/Livewire/App/Menu
